Add study trip 2016 description

--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -53,7 +53,12 @@
         "msaken": "XXXX",
         "sousse": "XXXX",
         "studyTrip": "XXXX",
-        "finalConference":"XXXX",
+        "tripDescription1": "XXXX",
+        "tripDescription2": "XXXX",
+        "tripDescription3": "XXXX",
+        "tripDescription4": "XXXX",
+        "tripDescription5": "XXXX",
+        "finalConference": "XXXX",
         "conferenceDescrip":"XXXX",
         "atiniAidi":"XXXX",
         "fitnessCreed":"XXXX",
