Add training pictures 2016

--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -1,197 +1,198 @@
 {
-    "home": {
-        "start": "XXXX",
-        "start2013": "XXXX",
-        "joinUs": "XXXX",
-        "achievement": "XXXX",
-        "startDescription": "XXXX"
-    },
-    "nav": {
-        "home": "XXXX",
-        "youthcouncil2015": "XXXX",
-        "youthcouncil2013": "XXXX",
-        "teams": "XXXX",
-        "partners": "XXXX",
-        "contact": "XXXX",
-        "languages": "XXXX",
-        "arabe": "XXXX",
-        "french": "XXXX",
-        "english": "XXXX",
-        "test": "XXXX",
-        "previous_editions": "XXXX"
-    },
-    "youthcouncil2016": {
-        "pfblockTitle": "XXXX",
-        "pfblockSubtitle": "XXXX",
-        "iconboxDesc1": "XXXX",
-        "iconboxTitle1": "XXXX",
-        "iconboxDesc2": "XXXX",
-        "iconboxTitle2": "XXXX",
-        "iconboxDesc3": "XXXX",
-        "iconboxTitle3": "XXXX",
-        "iconboxDesc4": "XXXX",
-        "iconboxTitle4": "XXXX",
-        "iconboxDesc5": "XXXX",
-        "readMore": "XXXX",
-        "download": "XXXX",
-        "training2015": "XXXX",
-        "trainingDescription": "XXXX",
-        "miniproject":"XXXX",
-        "miniprojectDescrip":"XXXX",
-        "projectErriadh": "XXXX",
-        "projectKK": "XXXX",
-        "projectHS": "XXXX",
-        "projectSousse": "XXXX",
-        "projectMonastir": "XXXX",
-        "projectKM": "XXXX",
-        "projectMsaken": "XXXX",
-        "erriadh": "XXXX",
-        "hs": "XXXX",
-        "kk": "XXXX",
-        "km": "XXXX",
-        "monastir": "XXXX",
-        "msaken": "XXXX",
-        "sousse": "XXXX",
-        "studyTrip": "XXXX",
-        "tripDescription1": "XXXX",
-        "tripDescription2": "XXXX",
-        "tripDescription3": "XXXX",
-        "tripDescription4": "XXXX",
-        "tripDescription5": "XXXX",
-        "finalConference": "XXXX",
-        "conferenceDescrip":"XXXX",
-        "atiniAidi":"XXXX",
-        "fitnessCreed":"XXXX",
-        "forumOrientation":"XXXX",
-        "dream":"XXXX"
-    },
-    "youthcouncil2015": {
-        "pfblockTitle": "XXXX",
-        "pfblockSubtitle": "XXXX",
-        "figCaptionTitle11": "XXXX",
-        "figCaptionTitle12": "XXXX",
-        "figCaptionDescription1": "XXXX",
-        "figCaptionTitle21": "XXXX",
-        "figCaptionTitle22": "XXXX",
-        "figCaptionDescription2": "XXXX",
-        "figCaptionTitle31": "XXXX",
-        "figCaptionTitle32": "XXXX",
-        "figCaptionDescription3": "XXXX",
-        "figCaptionTitle41": "XXXX",
-        "figCaptionTitle42": "XXXX",
-        "figCaptionDescription4": "XXXX",
-        "figCaptionTitle51": "XXXX",
-        "figCaptionTitle52": "XXXX",
-        "figCaptionDescription5": "XXXX",
-        "figCaptionTitle61": "XXXX",
-        "figCaptionTitle62": "XXXX",
-        "figCaptionDescription6": "XXXX",
-        "training2013": "XXXX",
-        "artCompetition": "XXXX",
-        "projects": "XXXX",
-        "studyTrip": "XXXX",
-        "guideBook": "XXXX",
-        "guideBookDescription": "XXXX",
-        "firtEdition": "XXXX",
-        "secondEdition": "XXXX",
-        "thirdEdition": "XXXX"
-    },
-    "youthcouncil2013": {
-        "pfblockTitle": "XXXX",
-        "pfblockSubtitle": "XXXX",
-        "figCaptionTitle11": "XXXX",
-        "figCaptionTitle12": "XXXX",
-        "figCaptionDescription1": "XXXX",
-        "figCaptionTitle21": "XXXX",
-        "figCaptionTitle22": "XXXX",
-        "figCaptionDescription2": "XXXX",
-        "figCaptionTitle31": "XXXX",
-        "figCaptionTitle32": "XXXX",
-        "figCaptionDescription3": "XXXX",
-        "figCaptionTitle41": "XXXX",
-        "figCaptionTitle42": "XXXX",
-        "figCaptionDescription4": "XXXX",
-        "figCaptionTitle51": "XXXX",
-        "figCaptionTitle52": "XXXX",
-        "figCaptionDescription5": "XXXX",
-        "figCaptionTitle61": "XXXX",
-        "figCaptionTitle62": "XXXX",
-        "figCaptionDescription6": "XXXX",
-        "training2013": "XXXX",
-        "artCompetition": "XXXX",
-        "projects": "XXXX",
-        "studyTrip": "XXXX",
-        "guideBook": "XXXX",
-        "guideBookDescription": "XXXX",
-        "firtEdition": "XXXX",
-        "secondEdition": "XXXX",
-        "thirdEdition": "XXXX"
-    },
-    "team": {
-        "pfblockTitle": "XXXX",
-        "pfblockSubtitle": "XXXX",
-        "textCenter1": "XXXX",
-        "textCenter2": "XXXX",
-        "textCenter3": "XXXX",
-        "textCenter4": "XXXX",
-        "textCenter5": "XXXX",
-        "textCenter6": "XXXX",
-        "textCenter7": "XXXX",
-        "erriadhYC": "XXXX",
-        "hsYC": "XXXX",
-        "kkYC": "XXXX",
-        "kmYC": "XXXX",
-        "monastirYC": "XXXX",
-        "msakenYC": "XXXX",
-        "sousseYC": "XXXX",
-        "coordinatorErriadh": "XXXX",
-        "erriadhDescription": "XXXX",
-        "coordinatorErriadhDescription": "XXXX",
-        "coordinatorHS": "XXXX",
-        "hsDescription": "XXXX",
-        "coordinatorHSDescription": "XXXX",
-        "coordinatorKK": "XXXX",
-        "kkDescription": "XXXX",
-        "coordinatorKKDescription": "XXXX",
-        "coordinatorSousse": "XXXX",
-        "sousseDescription": "XXXX",
-        "coordinatorSousseDescription": "XXXX",
-        "coordinatorMsaken": "XXXX",
-        "msakenDescription": "XXXX",
-        "coordinatorMsakenDescription": "XXXX",
-        "coordinatorKM": "XXXXX",
-        "kmDescription": "XXXX",
-        "coordinatorKMDescription": "XXXX",
-        "coordinatorMonastir": "XXXX",
-        "monastirDescritpion": "XXXX",
-        "coordinatorMonastirDescription": "XXXX",
-        "msakenYC": "XXXXX",
-        "hsMember1": "XXXXX",
-        "hsMember2": "XXXXX",
-        "hsMember3": "XXXXX",
-        "hsMember4": "XXXXX",
-        "hsMember5": "XXXXX"
-    },
-    "action": {
-        "readyToJoin": "XXXX",
-        "joinDescription": "XXXX"
-    },
-    "partners": {
-        "pfblockTitle": "XXXX",
-        "pfblockSubtitle": "XXXX",
-        "blockQuote1": "XXXX",
-        "footer1": "XXXX",
-        "blockQuote2": "XXXX",
-        "footer2": "XXXX",
-        "blockQuote3": "XXXX",
-        "footer3": "XXXX"
-    },
-    "contact": {
-        "contactUs": "XXXX!",
-        "contactDescription": "XXXX",
-        "name": "XXXX",
-        "email": "XXXX",
-        "message": "XXXX",
-        "sendMsg": "XXXX"
-    }
+  "home": {
+    "start": "XXXX",
+    "start2015": "XXXX",
+    "start2013": "XXXX",
+    "joinUs": "XXXX",
+    "achievement": "XXXX",
+    "startDescription": "XXXX"
+  },
+  "nav": {
+    "home": "XXXX",
+    "youthcouncil2016": "XXXX",
+    "youthcouncil2015": "XXXX",
+    "youthcouncil2013": "XXXX",
+    "teams": "XXXX",
+    "partners": "XXXX",
+    "contact": "XXXX",
+    "languages": "XXXX",
+    "arabe": "XXXX",
+    "french": "XXXX",
+    "english": "XXXX",
+    "test": "XXXX",
+    "previous_editions": "XXXX"
+  },
+  "youthcouncil2016": {
+    "pfblockTitle": "XXXX",
+    "pfblockSubtitle": "XXXX",
+    "iconboxDesc1": "XXXX",
+    "iconboxTitle1": "XXXX",
+    "iconboxDesc2": "XXXX",
+    "iconboxTitle2": "XXXX",
+    "iconboxDesc3": "XXXX",
+    "iconboxTitle3": "XXXX",
+    "iconboxDesc4": "XXXX",
+    "iconboxTitle4": "XXXX",
+    "iconboxDesc5": "XXXX",
+    "readMore": "XXXX",
+    "download": "XXXX",
+    "training2016": "XXXX",
+    "trainingDescription": "XXXX",
+    "miniproject": "XXXX",
+    "miniprojectDescrip": "XXXX",
+    "projectErriadh": "XXXX",
+    "projectKK": "XXXX",
+    "projectHS": "XXXX",
+    "projectSousse": "",
+    "projectMonastir": "XXXX",
+    "projectKM": "XXXX",
+    "projectMsaken": "XXXX",
+    "erriadh": "XXXX",
+    "hs": "XXXX",
+    "kk": "XXXX",
+    "km": "XXXX",
+    "monastir": "XXXX",
+    "msaken": "XXXX",
+    "sousse": "XXXX",
+    "studyTrip": "XXXX",
+    "tripDescription1": "XXXX",
+    "tripDescription2": "XXXX",
+    "tripDescription3": "XXXX",
+    "tripDescription4": "XXXX",
+    "tripDescription5": "XXXX",
+    "finalConference": "XXXX",
+    "conferenceDescrip": "XXXX",
+    "atiniAidi": "XXXX",
+    "fitnessCreed": "XXXX",
+    "forumOrientation": "XXXX",
+    "dream": "XXXX"
+  },
+  "youthcouncil2015": {
+    "pfblockTitle": "XXXX",
+    "pfblockSubtitle": "XXXX",
+    "figCaptionTitle11": "XXXX",
+    "figCaptionTitle12": "XXXX",
+    "figCaptionDescription1": "XXXX",
+    "figCaptionTitle21": "XXXX",
+    "figCaptionTitle22": "XXXX",
+    "figCaptionDescription2": "XXXX",
+    "figCaptionTitle31": "XXXX",
+    "figCaptionTitle32": "XXXX",
+    "figCaptionDescription3": "XXXX",
+    "figCaptionTitle41": "XXXX",
+    "figCaptionTitle42": "XXXX",
+    "figCaptionDescription4": "XXXX",
+    "figCaptionTitle51": "XXXX",
+    "figCaptionTitle52": "XXXX",
+    "figCaptionDescription5": "XXXX",
+    "figCaptionTitle61": "XXXX",
+    "figCaptionTitle62": "XXXX",
+    "figCaptionDescription6": "XXXX",
+    "training2013": "XXXX",
+    "artCompetition": "XXXX",
+    "projects": "XXXX",
+    "studyTrip": "XXXX",
+    "guideBook": "XXXX",
+    "guideBookDescription": "XXXX",
+    "firtEdition": "XXXX",
+    "secondEdition": "XXXX",
+    "thirdEdition": "XXXX"
+  },
+  "youthcouncil2013": {
+    "pfblockTitle": "XXXX",
+    "pfblockSubtitle": "XXXX",
+    "figCaptionTitle11": "XXXX",
+    "figCaptionTitle12": "XXXX",
+    "figCaptionDescription1": "XXXX",
+    "figCaptionTitle21": "XXXX",
+    "figCaptionTitle22": "XXXX",
+    "figCaptionDescription2": "XXXX",
+    "figCaptionTitle31": "XXXX",
+    "figCaptionTitle32": "XXXX",
+    "figCaptionDescription3": "XXXX",
+    "figCaptionTitle41": "XXXX",
+    "figCaptionTitle42": "XXXX",
+    "figCaptionDescription4": "XXXX",
+    "figCaptionTitle51": "XXXX",
+    "figCaptionTitle52": "XXXX",
+    "figCaptionDescription5": "XXXX",
+    "figCaptionTitle61": "XXXX",
+    "figCaptionTitle62": "XXXX",
+    "figCaptionDescription6": "XXXX",
+    "training2013": "XXXX",
+    "artCompetition": "XXXX",
+    "projects": "XXXX",
+    "studyTrip": "XXXX",
+    "guideBook": "XXXX",
+    "guideBookDescription": "XXXX",
+    "firtEdition": "XXXX",
+    "secondEdition": "XXXX",
+    "thirdEdition": "XXXX"
+  },
+  "team": {
+    "pfblockTitle": "XXXX",
+    "pfblockSubtitle": "XXXX",
+    "textCenter1": "XXXX",
+    "textCenter2": "XXXX",
+    "textCenter3": "XXXX",
+    "textCenter4": "XXXX",
+    "textCenter5": "XXXX",
+    "textCenter6": "XXXX",
+    "textCenter7": "XXXX",
+    "erriadhYC": "XXXX",
+    "hsYC": "XXXX",
+    "kkYC": "XXXX",
+    "kmYC": "XXXX",
+    "monastirYC": "XXXX",
+    "msakenYC": "XXXX",
+    "sousseYC": "XXXX",
+    "coordinatorErriadh": "XXXX",
+    "erriadhDescription": "XXXX",
+    "coordinatorErriadhDescription": "XXXX",
+    "coordinatorHS": "XXXX",
+    "hsDescription": "XXXX",
+    "coordinatorHSDescription": "XXXX",
+    "coordinatorKK": "XXXX",
+    "kkDescription": "XXXX",
+    "coordinatorKKDescription": "XXXX",
+    "coordinatorSousse": "XXXX",
+    "sousseDescription": "XXXX",
+    "coordinatorSousseDescription": "XXXX",
+    "coordinatorMsaken": "XXXX",
+    "msakenDescription": "XXXX",
+    "coordinatorMsakenDescription": "XXXX",
+    "coordinatorKM": "XXXX",
+    "kmDescription": "XXXX",
+    "coordinatorKMDescription": "XXXX",
+    "coordinatorMonastir": "XXXX",
+    "monastirDescritpion": "XXXX",
+    "coordinatorMonastirDescription": "XXXX",
+    "hsMember1": "XXXX",
+    "hsMember2": "XXXX",
+    "hsMember3": "XXXX",
+    "hsMember4": "XXXX",
+    "hsMember5": "XXXX"
+  },
+  "action": {
+    "readyToJoin": "XXXX",
+    "joinDescription": "XXXX"
+  },
+  "partners": {
+    "pfblockTitle": "XXXX",
+    "pfblockSubtitle": "XXXX",
+    "blockQuote1": "XXXX",
+    "footer1": "XXXX",
+    "blockQuote2": "XXXX",
+    "footer2": "XXXX",
+    "blockQuote3": "XXXX",
+    "footer3": "XXXX"
+  },
+  "contact": {
+    "contactUs": "XXXX",
+    "contactDescription": "XXXX",
+    "name": "XXXX",
+    "email": "XXXX",
+    "message": "XXXX",
+    "sendMsg": "XXXX"
+  }
 }
