Add pictures of the mini projects

--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -40,13 +40,16 @@
     "trainingDescription": "XXXX",
     "miniproject": "XXXX",
     "miniprojectDescrip": "XXXX",
-    "projectErriadh": "XXXX",
+    "projectErriadh1": "XXXX",
+    "projectErriadh2": "XXXX",
     "projectKK": "XXXX",
     "projectHS": "XXXX",
-    "projectSousse": "",
+    "projectSousse": "XXXX",
     "projectMonastir": "XXXX",
     "projectKM": "XXXX",
-    "projectMsaken": "XXXX",
+    "projectMsaken1": "XXXX",
+    "projectMsaken2": "XXXX",
+    "projectTeboulba":"XXXX",
     "erriadh": "XXXX",
     "hs": "XXXX",
     "kk": "XXXX",
@@ -54,6 +57,7 @@
     "monastir": "XXXX",
     "msaken": "XXXX",
     "sousse": "XXXX",
+    "teboulba": "XXXX",
     "studyTrip": "XXXX",
     "tripDescription1": "XXXX",
     "tripDescription2": "XXXX",
